# Vibe-Coaster

./: .gitignore  CMakeLists.txt  HANDOFF.md  MINECOASTER.command  README.md  REALISM.md  RESEARCH.md  build.sh  minecoaster-rt-benchmark  overlap_final.txt  s1.txt
.github/workflows/: macos-build.yml  v1-cloud-capture.yml
artifacts/v1-audit/: README.md
cmake/: V1Determinism.cmake
docs/: AGENT_BRIEF.md  CONTINUE.md  FIX_HANDOFF.md  GEOMETRY_REFERENCES.md  HANDOFF_NEXT.md  REALISM_SCALE.md  REAL_WORLD_REFERENCES.md  REFACTOR_PLAN.md  REFACTOR_PROMPT.md  RENDER_REWRITE_INVENTORY.md  RTX_PATHTRACING_WINDOWS.md  SESSION_STATE.md  TERRAIN_CONTRACT.md  V1_HANDOFF.md  V2_NEXT_SESSION_PLAN.md  V2_RENDER_REWRITE_PROMPT.md  VULKAN_PORT.md
hwrt/: audio.h  build.sh  coaster.h  main.mm  math.h  raylib_font.h  raylib_shim.h  shaders.h  terrain.h  track_gen.h
opengl/: CMakeLists.txt  COASTER_HANDOFF.md  COASTER_REWRITE.md  COASTER_TODO.md  MINECOASTER.command  build.sh
opengl/legacy/: README.md  audit_diagnostics.cpp  coaster_elements_ext.cpp  coaster_track.cpp
opengl/legacy/v1-original-nocap/: README.md
opengl/legacy/v1-original-nocap/src/: coaster_elements_ext.cpp  coaster_track.cpp  main.cpp  pathtrace.cpp
opengl/src/: audit_diagnostics.cpp  coaster_car.cpp  coaster_elements_ext.cpp  coaster_track.cpp  environment.cpp  game_state.cpp  main.cpp  pathtrace.cpp  presentation.cpp  render_fx.cpp  ride_constants.h  spline.cpp  terrain_field.h  track_render_cache.cpp  v1_geometry_audit.cpp  v1_profiles.h  voxel_render.cpp
opengl/src/track/: STEP6_HOST_SWITCH.md  track_math.cpp  track_math.h  track_planner.cpp  track_primitives.cpp  track_terrain.cpp  track_tests.cpp  track_types.h  track_v2.cpp  track_validate.cpp
src/: GRAPHICS_UPGRADE_TODO.md  MINECOASTER.command  coaster_car.cpp  coaster_elements_ext.cpp  coaster_track.cpp  environment.cpp  game_state.cpp  main.cpp  pathtrace.cpp  presentation.cpp  render_fx.cpp  ride_constants.h  spline.cpp  terrain_field.h  track_render_cache.cpp  v1_geometry_audit.cpp  v1_profiles.h  voxel_render.cpp
v1/: audit_diagnostics.cpp  coaster_elements_ext.cpp  coaster_track.cpp  committed_track.cpp  gen_constants.h  terrain_probe.cpp
vk/: CMakeLists.txt  PLAN.md  README.md  WORK_HANDOFF.md  run.sh
vk/shaders/: gbuffer.frag  hud.frag  hud.vert  lighting.frag  mesh.frag  mesh.vert  post.frag  sky.frag  taa.frag  water.frag  water.vert
vk/src/: CoasterTrack.h  GameCompat.h  Hud.h  Math.h  Physics.h  Terrain.h  Track.h  Water.h  main.cpp
vulkan/: CMakeLists.txt  PLAN.md  README.md  WORK_HANDOFF.md  run.bat
vulkan/shaders/: bloom.frag  fullscreen.vert  gbuffer.frag  gbuffer.vert  hud.vert  lighting.frag  mesh.vert  post.frag  shadow.vert  sky.frag  sky.vert  ssao.frag  ssr.frag
vulkan/src/: CoasterTrack.h  GameCompat.h  Hud.h  Math.h  Physics.h  Props.h  Track.h  main.cpp
win-rtx/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  INTEGRATION.md  README.md
win-rtx/cmake/: FindStreamline.cmake
win-rtx/shaders/: ClosestHit.hlsl  Common.hlsli  Intersection.hlsl  Miss.hlsl  RayGen.hlsl  RtPayload.hlsli  Tonemap.hlsl
win-rtx/src/: Camera.h  Dlss.cpp  Dlss.h  DxCommon.h  Renderer.cpp  Renderer.h  SceneConstants.h  VoxelScene.cpp  VoxelScene.h  main.cpp
